k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${K8S_DEPLOYMENT_NAME}
  namespace: ${K8S_NAMESPACE}
  labels:
    environment: ${CI_ENVIRONMENT_NAME}
    app: ${CI_PROJECT_NAME}
    ApplicationName: ${K8S_DEPLOYMENT_NAME}
spec:
  ports:
    - port: ${APP_PORT}
      protocol: TCP
      targetPort: ${APP_PORT}
  selector:
    app: ${K8S_DEPLOYMENT_NAME}
  type: ClusterIP
